# uncharted-waters

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy-hf.yml  uniqueness_analysis.yml
src/: api.py  auth.py  cli.py  config.py  models.py  pipeline.py
src/analysis/: llm_client.py  prompts.py  report.py  scoring.py
src/embeddings/: encoder.py  similarity.py
src/scraper/: base.py  dimensions.py
static/: app.js  index.html  style.css
tests/: test_embeddings.py  test_pipeline.py  test_scraper.py
tests/fixtures/: detail_page.html  search_results.json
