[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtic-uniqueness-analyzer"
version = "0.1.0"
description = "Automated DTIC uniqueness assessment for research proposals"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
